--- a/newspaper/index.html
+++ b/newspaper/index.html
@@ -24,7 +24,8 @@
     </head>
 
     <body>
-        <!-- Top Header Start -->
+        <!-- Top Header Start 
+        Luis Monsalve-->
         <div class="top-header">
             <div class="container">
                 <div class="row align-items-center">
