--- a/newspaper/index.html
+++ b/newspaper/index.html
@@ -31,7 +31,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-4">
                         <div class="logo">
-                            <a href="">
+                            <a href="" style="background-color: black;">
                                 <img src="img/logo.png" alt="Logo">
                             </a>
                         </div>
@@ -44,11 +44,22 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <div class="social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
+                            <a target="_blank" 
+                                href="https://www.youtube.com/@dataintelligenceinternatio8426">
+                                <i class="fab fa-youtube"></i></a>
+                            <a target="_blank" 
+                                href="https://twitter.com/data_int">
+                                <i class="fab fa-twitter"></i></a>
+                            <a target="_blank" 
+                                href="https://www.facebook.com/dataintelligencecl">
+                                <i class="fab fa-facebook"></i></a>
+                            <a target="_blank" 
+                                href="https://www.linkedin.com/company/data-intelligence-international/">
+                                <i class="fab fa-linkedin"></i></a>
+                            <a target="_blank" 
+                                href="https://www.instagram.com/data.intelligence/">
+                                <i class="fab fa-instagram"></i></a>
+                            
                         </div>
                     </div>
                 </div>
